--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -53,7 +53,7 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow8">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn11" horizontalalign="right">
-                                                <wm-anchor margin="1em 0.5em" name="anchor2" caption="Sign Up" fontweight="bold" on-click="Variables.goToPage_UserCreation.invoke()"></wm-anchor>
+                                                <wm-anchor margin="1em 0.5em" name="anchor2" caption="Sign Up" on-click="Variables.goToPage_UserCreation.invoke()"></wm-anchor>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
