--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -13,7 +13,7 @@
             <wm-anchor caption="Code Enforcement" name="codeEnforcement" iconclass="fa fa-legal" on-click="Variables.goToPage_CodeEnforcementDashboard.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin,CodeOfficer,CodeManager"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item11">
-            <wm-anchor name="anchorInspections" iconclass="wi wi-find-in-page" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
+            <wm-anchor name="anchorInspections" iconclass="wi wi-find-in-page" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_inventory">
             <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-domain" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin,CXAdmin" badgevalue="bind:Variables.FormDesignsForMuniAdmin.dataSet.dataValue"></wm-anchor>
