hid "Set as Primary" text for first vendor on NewForm wiizard. Updated toaster text on Forms to use "contractor" Files modified - [NewForm.html,Forms.variables.json,pom.xml]

--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -552,7 +552,7 @@
                     <wm-gridcolumn columnwidth="1" name="gridcolumn102"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="10" name="gridcolumn103">
                         <wm-composite name="composite9">
-                            <wm-checkbox caption="Set as Primary Contractor" name="checkboxVendorIsPrimary" datavalue="bind:!Variables.stvVendors.dataSet.length" disabled="bind:!Variables.stvVendors.dataSet.length"></wm-checkbox>
+                            <wm-checkbox caption="Set as Primary Contractor" name="checkboxVendorIsPrimary" datavalue="bind:!Variables.stvVendors.dataSet.length" disabled="bind:!Variables.stvVendors.dataSet.length" show="bind:Variables.stvVendors.dataSet.length > 0"></wm-checkbox>
                         </wm-composite>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="1" name="gridcolumn104"></wm-gridcolumn>
