updated/added explanatory text Files modified - [MyProfile.html,ViewProject.html,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -1,4 +1,4 @@
-<wm-page data-ng-controller="FormsPageController" pagetitle="bind:'View Form' + (!!Variables.CurrentForm.dataSet.data[$i].formTitle ? ' '+Variables.CurrentForm.dataSet.data[$i].formTitle : '')" name="page1">
+<wm-page data-ng-controller="FormsPageController" pagetitle="View Form" name="page1">
     <wm-header content="header" name="header1"></wm-header>
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
