--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -111,9 +111,7 @@
                                     <wm-layoutgrid name="layoutgrid18">
                                         <wm-gridrow name="gridrow76_1">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn135_1">
-                                                <wm-label name="label77" caption="The following members have been added to this project." margin="unset 0.5em"></wm-label>
-                                                <wm-label name="label78" caption="If you would like to add an additional project member, use the &quot;+Add Member&quot; button to perform a search for CivicXpress users. If that user is not in the system, use the &quot;+Invite Member&quot; button to send them an invitation to view the project."
-                                                margin="unset 0.5em"></wm-label>
+                                                <wm-label name="label77" caption="The following members have been added to this project by the Project Owner or Municipality Admin." margin="unset 0.5em"></wm-label>
                                                 <wm-label name="label79" caption="Users who appear below can complete transactions for the project." margin="unset 0.5em"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
